[package]
name = "elfox"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = {version="1.0.130", features=["derive"]}
serde-big-array = {version="0.3.2", features=["const-generics"]}
